source_set("metrics") {
  sources = [
    "bv_component_metrics_provider_delegate.cc",
    "bv_component_metrics_provider_delegate.h",
    "bv_metrics_service_client.cc",
    "bv_metrics_service_client.h",
    "renderer_process_metrics_provider.cc",
    "renderer_process_metrics_provider.h",
    "visibility_metrics_logger.cc",
    "visibility_metrics_logger.h",
    "visibility_metrics_provider.cc",
    "visibility_metrics_provider.h",
  ]
  deps = [
    "//bison:bison_jni_headers",
    "//bison/browser/lifecycle",
    "//bison/common",

    "//base",
    "//components/embedder_support/android/metrics",
    "//components/metrics",
    "//components/metrics:component_metrics",
    "//components/prefs",
    "//components/version_info/android:channel_getter",
    "//content/public/browser",
  ]
}
