source_set("metrics") {
  sources = [
    "bv_metrics_service_client.cc",
    "bv_metrics_service_client.h",
    "renderer_process_metrics_provider.cc",
    "renderer_process_metrics_provider.h",
    "visibility_metrics_logger.cc",
    "visibility_metrics_logger.h",
    "visibility_metrics_provider.cc",
    "visibility_metrics_provider.h",
  ]
  deps = [
    "//base",
    "//bison:bison_jni_headers",
    "//bison/browser/lifecycle",
    "//bison/common",
    "//components/embedder_support/android/metrics",
    "//components/metrics",
    "//components/metrics:component_metrics",
    "//components/prefs",
    "//components/version_info/android:channel_getter",
    "//content/public/browser",
  ]
}
