source_set("variations") {
  sources = [
    "bv_variations_service_client.cc",
    "bv_variations_service_client.h",
    # "variations_seed_loader.cc",
    # "variations_seed_loader.h",
  ]
  deps = [
    "//components/variations",
    "//components/variations/net",
    "//components/variations/service",
    "//components/version_info",
    "//components/version_info/android:channel_getter",
  ]
}
