# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")
import("//components/spellcheck/spellcheck_build_features.gni")

java_cpp_enum("browser_enums") {
  sources = [
    "bison_renderer_priority.h",
    "bison_settings.h",
    "permission/bison_permission_request.h",
    "safe_browsing/bison_safe_browsing_blocking_page.h",
    "safe_browsing/bison_url_checker_delegate_impl.h",
  ]
}

source_set("browser") {
  sources = [
    "android_protocol_handler.cc",
    "android_protocol_handler.h",
    "bison_autofill_client.cc",
    "bison_autofill_client.h",
    "bison_browser_context.cc",
    "bison_browser_context.h",
    "bison_browser_main_parts.cc",
    "bison_browser_main_parts.h",
    "bison_browser_permission_request_delegate.h",
    "bison_browser_policy_connector.cc",
    "bison_browser_policy_connector.h",
    "bison_browser_process.cc",
    "bison_browser_process.h",
    "bison_browser_terminator.cc",
    "bison_browser_terminator.h",
    "bison_content_browser_client.cc",
    "bison_content_browser_client.h",
    "bison_content_browser_overlay_manifest.cc",
    "bison_content_browser_overlay_manifest.h",
    "bison_content_renderer_overlay_manifest.cc",
    "bison_content_renderer_overlay_manifest.h",
    "bison_contents.cc",
    "bison_contents.h",
    "bison_contents_client_bridge.cc",
    "bison_contents_client_bridge.h",
    "bison_contents_io_thread_client.cc",
    "bison_contents_io_thread_client.h",
    "bison_contents_lifecycle_notifier.cc",
    "bison_contents_lifecycle_notifier.h",
    "bison_contents_statics.cc",
    "bison_cookie_access_policy.cc",
    "bison_cookie_access_policy.h",
    "bison_debug.cc",
    "bison_devtools_manager_delegate.cc",
    "bison_devtools_manager_delegate.h",
    "bison_devtools_server.cc",
    "bison_devtools_server.h",
    "bison_download_manager_delegate.cc",
    "bison_download_manager_delegate.h",
    "bison_feature_list.cc",
    "bison_feature_list_creator.cc",
    "bison_feature_list_creator.h",
    "bison_form_database.cc",
    "bison_form_database_service.cc",
    "bison_form_database_service.h",
    "bison_http_auth_handler.cc",
    "bison_http_auth_handler.h",
    "bison_javascript_dialog_manager.cc",
    "bison_javascript_dialog_manager.h",
    "bison_media_url_interceptor.cc",
    "bison_media_url_interceptor.h",
    "bison_pdf_exporter.cc",
    "bison_pdf_exporter.h",
    "bison_permission_manager.cc",
    "bison_permission_manager.h",
    "bison_pref_names.cc",
    "bison_pref_names.h",
    "bison_print_manager.cc",
    "bison_print_manager.h",
    "bison_proxy_controller.cc",
    "bison_quota_manager_bridge.cc",
    "bison_quota_manager_bridge.h",
    "bison_quota_permission_context.cc",
    "bison_quota_permission_context.h",
    "bison_render_process.cc",
    "bison_render_process.h",
    "bison_render_process_gone_delegate.h",
    "bison_renderer_priority.h",
    "bison_resource_context.cc",
    "bison_resource_context.h",
    "bison_settings.cc",
    "bison_settings.h",
    "bison_speech_recognition_manager_delegate.cc",
    "bison_speech_recognition_manager_delegate.h",
    "bison_ssl_host_state_delegate.cc",
    "bison_ssl_host_state_delegate.h",
    "bison_variations_seed_bridge.cc",
    "bison_variations_seed_bridge.h",
    "bison_variations_service_client.cc",
    "bison_variations_service_client.h",
    "bison_web_contents_delegate.cc",
    "bison_web_contents_delegate.h",
    "bison_web_contents_view_delegate.cc",
    "bison_web_contents_view_delegate.h",
    "bison_web_ui_controller_factory.cc",
    "bison_web_ui_controller_factory.h",
    "cookie_manager.cc",
    "cookie_manager.h",
    "find_helper.cc",
    "find_helper.h",
    "icon_helper.cc",
    "icon_helper.h",
    "input_stream.cc",
    "input_stream.h",
    "js_java_interaction/js_java_configurator_host.cc",
    "js_java_interaction/js_java_configurator_host.h",
    "js_java_interaction/js_reply_proxy.cc",
    "js_java_interaction/js_reply_proxy.h",
    "js_java_interaction/js_to_java_messaging.cc",
    "js_java_interaction/js_to_java_messaging.h",
    "network_service/android_stream_reader_url_loader.cc",
    "network_service/android_stream_reader_url_loader.h",
    "network_service/bison_network_change_notifier.cc",
    "network_service/bison_network_change_notifier.h",
    "network_service/bison_network_change_notifier_factory.cc",
    "network_service/bison_network_change_notifier_factory.h",
    "network_service/bison_proxy_config_monitor.cc",
    "network_service/bison_proxy_config_monitor.h",
    "network_service/bison_proxying_restricted_cookie_manager.cc",
    "network_service/bison_proxying_restricted_cookie_manager.h",
    "network_service/bison_proxying_url_loader_factory.cc",
    "network_service/bison_proxying_url_loader_factory.h",
    "network_service/bison_url_loader_throttle.cc",
    "network_service/bison_url_loader_throttle.h",
    "network_service/bison_web_resource_intercept_response.cc",
    "network_service/bison_web_resource_intercept_response.h",
    "network_service/bison_web_resource_request.cc",
    "network_service/bison_web_resource_request.h",
    "network_service/bison_web_resource_response.cc",
    "network_service/bison_web_resource_response.h",
    "network_service/input_stream_reader.cc",
    "network_service/input_stream_reader.h",
    "network_service/net_helpers.cc",
    "network_service/net_helpers.h",
    "page_load_metrics/page_load_metrics_initialize.cc",
    "page_load_metrics/page_load_metrics_initialize.h",
    "permission/bison_permission_request.cc",
    "permission/bison_permission_request.h",
    "permission/bison_permission_request_delegate.cc",
    "permission/bison_permission_request_delegate.h",
    "permission/media_access_permission_request.cc",
    "permission/media_access_permission_request.h",
    "permission/permission_request_handler.cc",
    "permission/permission_request_handler.h",
    "permission/permission_request_handler_client.cc",
    "permission/permission_request_handler_client.h",
    "permission/simple_permission_request.cc",
    "permission/simple_permission_request.h",
    "popup_touch_handle_drawable.cc",
    "popup_touch_handle_drawable.h",
    "renderer_host/auto_login_parser.cc",
    "renderer_host/auto_login_parser.h",
    "renderer_host/bison_render_view_host_ext.cc",
    "renderer_host/bison_render_view_host_ext.h",
    "safe_browsing/bison_safe_browsing_blocking_page.cc",
    "safe_browsing/bison_safe_browsing_blocking_page.h",
    "safe_browsing/bison_safe_browsing_ui_manager.cc",
    "safe_browsing/bison_safe_browsing_ui_manager.h",
    "safe_browsing/bison_safe_browsing_whitelist_manager.cc",
    "safe_browsing/bison_safe_browsing_whitelist_manager.h",
    "safe_browsing/bison_url_checker_delegate_impl.cc",
    "safe_browsing/bison_url_checker_delegate_impl.h",
    "scoped_add_feature_flags.cc",
    "scoped_add_feature_flags.h",
    "state_serializer.cc",
    "state_serializer.h",
    "tracing/bison_trace_event_args_whitelist.cc",
    "tracing/bison_trace_event_args_whitelist.h",
    "tracing/bison_tracing_controller.cc",
    "tracing/bison_tracing_controller.h",
    "tracing/bison_tracing_delegate.cc",
    "tracing/bison_tracing_delegate.h",
  ]

  deps = [
    "//base",
    "//bison/core:browser_jni_headers",
    "//bison/core:generate_components_strings",
    "//bison/core/browser/gfx",
    "//bison/core/browser/metrics",
    "//bison/core/common",
    "//bison/core/common:common_mojom",
    "//components/autofill/android:provider",
    "//components/autofill/content/browser",
    "//components/cdm/browser",
    "//components/content_capture/android",
    "//components/content_capture/browser",
    "//components/crash/content/app",
    "//components/crash/content/browser",
    "//components/embedder_support/android:web_contents_delegate",
    "//components/google/core/common",
    "//components/heap_profiling",
    "//components/metrics",
    "//components/minidump_uploader",
    "//components/navigation_interception",
    "//components/page_load_metrics/browser",
    "//components/policy/content/",
    "//components/policy/core/browser",
    "//components/pref_registry",
    "//components/prefs",
    "//components/printing/browser",
    "//components/printing/common",
    "//components/safe_browsing",
    "//components/safe_browsing:features",
    "//components/safe_browsing:ping_manager",
    "//components/safe_browsing/android:remote_database_manager",
    "//components/safe_browsing/browser",
    "//components/safe_browsing/browser:network_context",
    "//components/safe_browsing/common",
    "//components/safe_browsing/db:database_manager",
    "//components/safe_browsing/db:safebrowsing_proto",
    "//components/safe_browsing/triggers",
    "//components/safe_browsing/web_ui",
    "//components/safe_browsing/web_ui:constants",
    "//components/security_interstitials/content:security_interstitial_page",
    "//components/security_interstitials/core",
    "//components/services/heap_profiling/public/cpp",
    "//components/spellcheck:buildflags",
    "//components/url_formatter",
    "//components/user_prefs",
    "//components/variations",
    "//components/variations/net",
    "//components/variations/service",
    "//components/version_info",
    "//components/version_info/android:channel_getter",
    "//components/visitedlink/browser",
    "//components/webdata/common",
    "//content/public/browser",
    "//media/mojo:buildflags",
    "//printing",
    "//services/preferences/tracked",
    "//third_party/crashpad/crashpad/client",
    "//ui/android",
    "//ui/gl",
    "//ui/resources",
    "//ui/touch_selection",
  ]

  if (enable_spellcheck) {
    deps += [ "//components/spellcheck/browser" ]
  }

  configs += [
    "//tools/v8_context_snapshot:use_v8_context_snapshot",
    "//v8:external_startup_data",
  ]
}
