# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("common_mojom") {
  sources = [
    "js_java_interaction/interfaces.mojom",
  ]

  public_deps = [
    "//mojo/public/mojom/base",
    "//services/network/public/mojom:mojom",
  ]
}



source_set("common") {
  sources = [
    "android_webview_message_generator.cc",
    "android_webview_message_generator.h",
    "bison_content_client.cc",
    "bison_content_client.h",
    "bison_descriptors.h",
    "bison_features.cc",
    "bison_features.h",
    "bison_hit_test_data.cc",
    "bison_hit_test_data.h",
    "bison_media_drm_bridge_client.cc",
    "bison_media_drm_bridge_client.h",
    "bison_paths.cc",
    "bison_paths.h",
    "bison_resource.cc",
    "bison_resource.h",
    "bison_resource_bundle.cc",
    "bison_resource_bundle.h",
    "bison_switches.cc",
    "bison_switches.h",
    "crash_reporter/bison_crash_reporter_client.cc",
    "crash_reporter/bison_crash_reporter_client.h",
    "crash_reporter/crash_keys.cc",
    "crash_reporter/crash_keys.h",
    "devtools_instrumentation.h",
    "render_view_messages.cc",
    "render_view_messages.h",
    "url_constants.cc",
    "url_constants.h",
  ]
  deps = [
    "//bison/core:common_jni_headers",
    "//base",
    "//components/cdm/common",
    "//components/crash/content/app",
    "//components/crash/core/common:crash_key",
    "//components/gwp_asan/common",
    "//components/services/heap_profiling/public/cpp",
    "//components/version_info",
    "//components/version_info:generate_version_info",
    "//components/version_info/android:channel_getter",
    "//content/public/common",
    "//gpu/config",
    "//ipc",
    "//mojo/public/cpp/bindings",
    "//skia",
    "//ui/base",
    "//ui/gfx/geometry",
    "//ui/gfx/ipc/geometry",
    "//ui/gfx/ipc/skia",
    "//url",
  ]
}
