# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("metrics") {
  sources = [
    "bison_metrics_log_uploader.cc",
    "bison_metrics_log_uploader.h",
    "bison_metrics_service_client.cc",
    "bison_metrics_service_client.h",
    "memory_metrics_logger.cc",
    "memory_metrics_logger.h",
  ]
  deps = [
    "//base",
    "//bison/core:browser_jni_headers",
    "//bison/core/common",
    "//components/metrics",
    "//components/metrics:gpu",
    "//components/metrics:net",
    "//components/metrics:ui",
    "//components/prefs",
    "//components/version_info",
    "//components/version_info/android:channel_getter",
    "//content/public/browser",
    "//services/resource_coordinator/public/cpp/memory_instrumentation:browser",
  ]
}
